--- a/article-discipline/style.css
+++ b/article-discipline/style.css
@@ -23,7 +23,7 @@ mark {
 }
 header {
     color: #0a0a0a;
-    font-family: "Helvetica";
+    font-family: "Oxanium", serif;
     font-weight: bold;
     line-height: calc(var(--root-line-height) * 4);
     padding-left: calc(var(--padding-left) * 2);
@@ -31,13 +31,13 @@ header {
     display: flex;
 }
 h1 {
-    font-size: calc(var(--root-size-h1) * 2);
+    font-size: calc(var(--root-size-h1) * 1.95);
 }
 h2 { 
     font-size: calc(var(--root-size-h2) * 2);
 }
 h3 {
-    font-family: "Helvetica";
+    font-family: "Oxanium", serif;
     font-weight: bold;
     font-style: normal;
     line-height: 120%;
@@ -51,7 +51,7 @@ h4 {
 }
 #titlecontinue {
     font-size: calc(var(--root-size-h2) * 2);
-    font-family: "Oxanium", sans-serif;
+    font-family: "Oxanium", serif;
     font-style: normal;
 }
 #discipline {
@@ -102,8 +102,8 @@ h4 {
     position: sticky;
     top: 0;
     z-index: 1;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    padding-top: 30px;
+	padding-bottom: 30px;
 
 }
 .stickytitle2 {
@@ -113,8 +113,8 @@ h4 {
     top: 0;
     z-index: 4;
     background-color: #c5c5c5;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    padding-top: 30px;
+	padding-bottom: 30px;
 }
 .stickytitle3 {
     border-bottom: 2px solid #000000;
@@ -123,8 +123,8 @@ h4 {
     top: 0;
     z-index: 5;
     background-color: #c5c5c5;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    padding-top: 30px;
+	padding-bottom: 30px;
 }
 .stickytitle4 {
     border-bottom: 2px solid #000000;
@@ -133,8 +133,8 @@ h4 {
     top: 0;
     z-index: 6;
     background-color: #c5c5c5;
-    padding-top: 0.5px;
-    padding-bottom: 0.2%;
+    padding-top: 30px;
+	padding-bottom: 30px;
 }
 .stickytitle5 {
     border-bottom: 2px solid #000000;
@@ -143,8 +143,8 @@ h4 {
     top: 0;
     z-index: 8;
     background-color: #c5c5c5;
-    padding-top: 0.5px;
-    padding-bottom: 0.2%;
+    padding-top: 30px;
+	padding-bottom: 30px;
 }
  /* Sections with the sticky */
 .frontsection {
