--- a/assets/common.css
+++ b/assets/common.css
@@ -128,7 +128,7 @@ a:hover {
  /* Next article's name */
  #nextarticle {
     font-size: 36px;
-    font-family: "Helvetica";
+    font-family: "Oxanium", serif;
     font-weight: bold;
     font-style: italic;
     line-height: 165%;
