--- a/style.css
+++ b/style.css
@@ -107,8 +107,8 @@ body {
 	top: 0;
 	position: sticky;
 	z-index: 300;
-	padding-top: 8%;
-	padding-bottom: 8%;
+	padding-top: 30px;
+	padding-bottom: 30px;
 }
 article {
 	padding-bottom: 0%;
