--- a/article-discipline/style.css
+++ b/article-discipline/style.css
@@ -16,13 +16,14 @@
     
 }
 mark {
-    background-color: yellow;
+    background-color: #AD8AFF;
 }
 .bigtext1 {
     width: calc(var(--width-p) * 1);
 }
 header {
-    color: #0a0a0a;
+    color: #e8e8e8;
+    background-color:  #1A1A1A;
     font-family: "Oxanium", serif;
     font-weight: bold;
     line-height: calc(var(--root-line-height) * 4);
@@ -58,22 +59,26 @@ h4 {
 }
 #discipline {
     font-size: calc(var(--root-size-sub) * 3.05);
+    color: #AD8AFF;
 }
  /* Author's name, volume, and year */
 #volume {
     font-size: calc(var(--root-size-h) * 1.5);
     border-bottom: 3px solid;
+    border-color: #FACA01;
     padding-left: 0;
     padding-bottom: 10px;
 }
 #author1 {
     font-size: calc(var(--root-size-h) * 1.5);
     border-left: 3px solid;
+    border-color: #AD8AFF;
     padding: 10px;
 }
 #author2 {
     font-size: calc(var(--root-size-h) * 1.5);
     border-left: 3px solid;
+    border-color: #AD8AFF;
     padding: 10px;
     padding-top: 5px;
     padding-bottom: 20px;
@@ -98,8 +103,20 @@ h4 {
 }
  /* Sticky titles */
 .stickytitle {
-    background-color: #c5c5c5;
+    background-color: #e4e4e4;
     border-bottom: 2px solid #000000;
+    border-top: 2px solid #000000;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    padding-top: 30px;
+	padding-bottom: 30px;
+    padding-left: calc(var(--padding-left-sticky) * 2);
+
+}
+.stickytitledark {
+    background-color: #AD8AFF;
+
     border-top: 2px solid #000000;
     position: sticky;
     top: 0;
@@ -112,6 +129,7 @@ h4 {
 .stickytitle2 {
     border-bottom: 2px solid #000000;
     border-top: 2px solid #000000;
+    background-color:#1A1A1A;
     position: sticky;
     top: 0;
     z-index: 4;
