--- a/article-discipline/style.css
+++ b/article-discipline/style.css
@@ -131,7 +131,7 @@ h4 {
     border-top: 2px solid #000000;
     position: sticky;
     top: 0;
-    z-index: 4;
+    z-index: 3;
     background-color: #1A1A1A;
     color: white;
     padding-top: 30px;
@@ -155,7 +155,7 @@ h4 {
     border-top: 2px solid #000000;
     position: sticky;
     top: 0;
-    z-index: 6;
+    z-index: 5;
     background-color: #1A1A1A;
     color: white;
     padding-top: 30px;
@@ -186,13 +186,25 @@ h4 {
 	padding-bottom: 30px;
     padding-left: calc(var(--padding-left-sticky) * 2.5);
 }
+.stickytitle7 {
+    border-bottom: 2px solid #000000;
+    border-top: 2px solid #000000;
+    position: sticky;
+    top: 0;
+    z-index: 12;
+    background-color: #D9D9D9;
+    color: rgb(16, 16, 16);
+    padding-top: 30px;
+	padding-bottom: 30px;
+    padding-left: calc(var(--padding-left-sticky) * 2.5);
+}
  /* Sections with the sticky */
 .frontsection {
     padding-top: 20px;
     padding-bottom: 20px;
     background-color: #D9D9D9;
     position: relative;
-    z-index: 3;
+    z-index: 2;
 }
 
 .frontsection2 {
@@ -200,14 +212,14 @@ h4 {
     padding-bottom: 20px;
     background-color: #D9D9D9;
     position: relative;
-    z-index: 5;
+    z-index: 4;
 }
 .frontsection3 {
     padding-top: 20px;
     padding-bottom: 20px;
     background-color: #ffffff;
     position: relative;
-    z-index: 7;
+    z-index: 5;
 }
 .frontsection4 {
     padding-top: 20px;
@@ -215,6 +227,13 @@ h4 {
     background-color: #ffffff;
     position: relative;
     z-index: 9;
+}
+.frontsection5 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #ffffff;
+    position: relative;
+    z-index: 11;
 }
  /* Subheading for the "An Alternative Disciplinary" title */
 #subtitle-alternative {
@@ -252,5 +271,10 @@ h4 {
         padding-bottom: 60px;
         line-height: 100px;
     }
-
+    .readnext {
+        margin-left: calc(var(--margin-left-next) * 6.5);
+        margin-top: 40px;
+        padding-bottom: 100px;
+    }
+    
 }
