applied the css to the factory article

--- a/common.css
+++ b/common.css
@@ -125,7 +125,7 @@ sup {
     text-decoration: none;
      }
 a:hover {
-	background-color: #ED4A34;
+	background-color: #AD8AFF;
   	color: white;
 }
 
