--- a/article-factory/style.css
+++ b/article-factory/style.css
@@ -1,12 +1,37 @@
+
+mark {
+    background-color: #FACA01;
+}
+.authordiv {
+    display: flex;
+    flex-direction: column;
+    line-height: 120%;
+}
+.headerdiv {
+    padding-bottom: 20px;
+}
+ /* sections with background color */
+.withbackground {
+    background-color: #D9D9D9;
+    padding-bottom: 20px;
+    padding-top: 20px
+    
+}
+.bigtext1 {
+    width: calc(var(--width-p) * 1);
+}
 header {
-	font-family: "Oxanium", sans-serif;
-	font-weight: bold;
-	line-height: 24px;
-	padding: 16px;
-	padding-top: 40px;
+    color: #e8e8e8;
+    background-color:  #1A1A1A;
+    font-family: "Oxanium", serif;
+    font-weight: bold;
+    line-height: calc(var(--root-line-height) * 4);
+    padding-left: calc(var(--padding-left) * 2);
+    padding-top: 40px;
+    display: flex;
 }
 h1 {
-    font-size: calc(var(--root-size-h1) * 3);
+    font-size: calc(var(--root-size-h1) * 1.95);
 }
 h2 { 
     font-size: calc(var(--root-size-h2) * 2);
@@ -19,9 +44,6 @@ h3 {
     font-size: calc(var(--root-size-h3) * 2);
     padding-left: calc(var(--padding-left-sticky) * 2);
 }
-.bigtext1 {
-    width: calc(var(--width-bigt) * 1);
-}
 h4 {
     font-family: "Oxanium", serif;
     font-weight: bold;
@@ -29,14 +51,28 @@ h4 {
     margin-left: 16px;
     line-height: 145%;
 }
-p {
-	width: calc(var(--width-p) * 1.7);
-}
 #titlecontinue {
-	font-size: calc(var(--root-size-h3) * 3.3);
-	padding-bottom: 16px;
-	font-family: "Oxanium", sans-serif;
-	font-style: normal;
+    font-size: calc(var(--root-size-h2) * 2);
+    font-family: "Oxanium", serif;
+    font-style: normal;
+}
+#factory {
+    font-size: calc(var(--root-size-sub) * 3.05);
+    color: #FACA01;
+}
+ /* Author's name, volume, and year */
+#volume {
+    font-size: calc(var(--root-size-h) * 1.5);
+    border-bottom: 3px solid;
+    border-color: #FE5B51;
+    padding-left: 0;
+    padding-bottom: 10px;
+}
+#author1 {
+    font-size: calc(var(--root-size-h) * 1.5);
+    border-left: 3px solid;
+    border-color: #FACA01;
+    padding: 10px;
 }
 
 
@@ -73,7 +109,21 @@ p {
         --right-arrow: 20px;
         --bottom-arrow: 60px;
         --padding-left-sticky: 27px;
-		--width-bigt: 50ch;
-		--margin-left-next: 94px;
 	}
+
+    .twocontentsheader {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        gap: 100px;
+    }
+    header {
+        padding-bottom: 60px;
+        line-height: 100px;
+    }
+    .readnext {
+        margin-left: calc(var(--margin-left-next) * 6.5);
+        margin-top: 40px;
+        padding-bottom: 100px;
+    }
+    
 }
