--- a/article-factory/style.css
+++ b/article-factory/style.css
@@ -92,6 +92,9 @@ h4 {
     z-index: 100;
     position: fixed;
 }
+#settings { 
+    font-size: calc(var(--root-size-h2) * 1.75);
+}
 
 @media (min-width: 950px) {
     :root {
@@ -124,6 +127,9 @@ h4 {
         margin-left: calc(var(--margin-left-next) * 6.5);
         margin-top: 40px;
         padding-bottom: 100px;
+    }
+    #settings { 
+        font-size: calc(var(--root-size-h2) * 2);
     }
     
 }
