Fixed the nav bar

--- a/common.css
+++ b/common.css
@@ -124,9 +124,9 @@ sup {
     font-weight: 550;
     text-decoration: none;
      }
-a:hover {
-	background-color: #AD8AFF;
-  	color: white;
+/* a:hover { */
+	/* background-color: #AD8AFF; */
+  	/* color: white; */
 }
 
  /* Next article's name */
