trying out a different approach for the links issue on factory article

--- a/common.css
+++ b/common.css
@@ -66,6 +66,9 @@ p {
 }
 sup {
     line-height: 0;
+    font-size:small; 
+    font-weight: bold;
+    vertical-align:super;
 }
  /* big paragraphs */
  .bigtext1 {
