--- a/article-factory/style.css
+++ b/article-factory/style.css
@@ -10,6 +10,9 @@ mark {
 .headerdiv {
     padding-bottom: 20px;
 }
+i {
+    font-style: italic;
+}
  /* sections with background color */
 .withbackground {
     background-color: #D9D9D9;
