--- a/common.css
+++ b/common.css
@@ -70,6 +70,9 @@ sup {
     font-weight: bold;
     vertical-align:super;
 }
+i {
+    font-style: italic;
+}
  /* big paragraphs */
  .bigtext1 {
     padding-top: 20px;
