--- a/article-discipline/style.css
+++ b/article-discipline/style.css
@@ -42,13 +42,13 @@ h3 {
     font-weight: bold;
     font-style: normal;
     line-height: 120%;
-    font-size: calc(var(--root-size-h3) * 2);
+    font-size: calc(var(--root-size-h3) * 1.7);
     padding-left: calc(var(--padding-left-sticky) * 2);
 }
 h4 {
     font-family: "Oxanium", serif;
     font-weight: bold;
-    font-size: 28px;
+    font-size: calc(var(--root-size-h3) * 1.5);
     margin-left: 16px;
     line-height: 145%;
 }
@@ -109,20 +109,19 @@ h4 {
     position: sticky;
     top: 0;
     z-index: 1;
-    padding-top: 30px;
-	padding-bottom: 30px;
+    padding-top: 10px;
+	padding-bottom: 10px;
     padding-left: calc(var(--padding-left-sticky) * 2);
 
 }
 .stickytitledark {
     background-color: #AD8AFF;
-
     border-top: 2px solid #000000;
     position: sticky;
     top: 0;
     z-index: 1;
-    padding-top: 30px;
-	padding-bottom: 30px;
+    padding-top: 10px;
+	padding-bottom: 10px;
     padding-left: calc(var(--padding-left-sticky) * 2);
 
 }
@@ -134,8 +133,8 @@ h4 {
     z-index: 3;
     background-color: #1A1A1A;
     color: white;
-    padding-top: 30px;
-	padding-bottom: 30px;
+    padding-top: 10px;
+	padding-bottom: 10px;
     padding-left: calc(var(--padding-left-sticky) * 2.5);
 }
 .stickytitle3 {
@@ -146,8 +145,8 @@ h4 {
     z-index: 5;
     background-color: #1A1A1A;
     color: white;
-    padding-top: 30px;
-	padding-bottom: 30px;
+    padding-top: 10px;
+	padding-bottom: 10px;
     padding-left: calc(var(--padding-left-sticky) * 2.5);
 }
 .stickytitle4 {
@@ -158,8 +157,8 @@ h4 {
     z-index: 5;
     background-color: #1A1A1A;
     color: white;
-    padding-top: 30px;
-	padding-bottom: 30px;
+    padding-top: 10px;
+	padding-bottom: 10px;
     padding-left: calc(var(--padding-left-sticky) * 2.5);
 }
 .stickytitle5 {
@@ -170,8 +169,8 @@ h4 {
     z-index: 8;
     background-color: #1A1A1A;
     color: white;
-    padding-top: 30px;
-	padding-bottom: 30px;
+    padding-top: 10px;
+	padding-bottom: 10px;
     padding-left: calc(var(--padding-left-sticky) * 2);
 }
 .stickytitle6 {
@@ -182,8 +181,8 @@ h4 {
     z-index: 10;
     background-color: #1A1A1A;
     color: white;
-    padding-top: 30px;
-	padding-bottom: 30px;
+    padding-top: 10px;
+	padding-bottom: 10px;
     padding-left: calc(var(--padding-left-sticky) * 2.5);
 }
 .stickytitle7 {
@@ -194,8 +193,8 @@ h4 {
     z-index: 12;
     background-color: #D9D9D9;
     color: rgb(16, 16, 16);
-    padding-top: 30px;
-	padding-bottom: 30px;
+    padding-top: 10px;
+	padding-bottom: 10px;
     padding-left: calc(var(--padding-left-sticky) * 2.5);
 }
  /* Sections with the sticky */
@@ -237,7 +236,8 @@ h4 {
 }
  /* Subheading for the "An Alternative Disciplinary" title */
 #subtitle-alternative {
-    font-size: 20px;
+    font-size: 18px;
+    font-weight: 600;
 }
  /* Conclusion's paragraph */
 #lastparagraph {
