--- a/common.css
+++ b/common.css
@@ -66,7 +66,7 @@ p {
 }
 sup {
     line-height: 0;
-    font-size:small; 
+    font-size:medium; 
     font-weight: bold;
     vertical-align:super;
 }
