--- a/article-discipline/style.css
+++ b/article-discipline/style.css
@@ -326,5 +326,36 @@ p {
         margin-top: 40px;
         padding-bottom: 100px;
     }
+    .paragraph-withfootnotes {
+        display: grid;
+        grid-template-columns: 1.5fr 1fr; /* Two-thirds for paragraphs, one-third for citations */
+        gap: 20px; /* Optional spacing between columns */
+        align-items: start; /* Align items at the top */
+      }
+      .paragraphs {
+        padding: 10px;
+      }
+      
+      .citationdiv {
+        padding: 10px;
+      }
+      summary {
+        margin-left: calc(var(--margin-p-left) * 1);
+        padding-left: 14px;
+        margin-top: 40px;
+        padding-top: 14px;
+        padding-bottom: 14px;
+        font-size: 20px;
+        font-weight: bold;
+        border-top: 2px solid #0c0c0c;
+        border-bottom:2px solid #0c0c0c;
+        border-right:2px solid #0c0c0c;
+        border-left:2px solid #0c0c0c;
+        background-color:#ddd1fb;
+        width: 450px;
+    }
+    ul {
+        width: 450px;
+    }
     
 }
