--- a/common.css
+++ b/common.css
@@ -35,6 +35,7 @@
 	--bottom-arrow: 50px;
 	--padding-left-sticky: 5px;
 	--width-bigt: 21ch;
+    --width-citationbox: 150px;
 	--margin-left-next: 16px;
 }
 body {
