--- a/common.css
+++ b/common.css
@@ -16,6 +16,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Amarante&family=Arizonia&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=DM+Serif+Text:ital@0;1&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Limelight&family=Londrina+Shadow&family=Manrope:wght@200..800&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+Symbols+2&family=Oxanium:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Rubik+Doodle+Shadow&family=Zilla+Slab+Highlight:wght@400;700&display=swap');
 :root {
     --root-size: 8px;
+    --root-size-bigt: 10px;
     --root-size-nav: 8px;
     --root-size-big: 16px;
     --root-size-h1: 21px;
@@ -26,6 +27,7 @@
     --root-line-height: 20px;
     --padding-left: 8px;
     --width-p: 21ch;
+    --width-bigt: 21ch;
     --padding-left-p: 8px;
     --padding-left-sticky: 8px;
     --margin-p-left: 8px;
@@ -50,6 +52,7 @@ article {
 }
 section {
     padding-top: 20px;
+    padding-bottom: 60px;
 }
 p {
     margin-left: calc(var(--margin-p-left) * 1);
@@ -60,11 +63,7 @@ p {
     line-height: 170%;
 	padding-top: 30px;
 }
-.bigtext1 {
-	font-size: calc(var(--root-size) * 3);
-	line-height: 180%;
-	width: calc(var(--width-p) * 3);
-}
+
 sup {
     line-height: 0;
     font-size:medium; 
@@ -78,9 +77,9 @@ i {
  .bigtext1 {
     padding-top: 20px;
     padding-bottom: 20px;
-    font-size: calc(var(--root-size-big) * 1.6);
+    font-size: calc(var(--root-size-bigt) * 2.5);
     line-height: 160%;
-    width: calc(var(--width-p) * 1.3); 
+    width: calc(var(--width-bigt) * 1.1); 
 }
 .withbackground {
 	background-color: #D9D9D9;
